# brainsatplay

./: .env  .gitignore  .nvmrc  README.md  TODO.md  TODO.txt  app.js  app.mjs  build.sh  builder.config.js  capacitor.config.ts  deploy.sh  env  favicon.xcf  index.html  info.js  jsdoc.config.json  netlify.toml  package-lock.json  package.json  server.js  snowpack.config.js  snowpack.crt  snowpack.key  tinybuild.config.js  tsconfig.json  vite.config.js  webpack.config.js  workbox-config.js
backend/: index.ts  network.ts  package.json
brainsatplay/: README.md  brainsatplay.js  brainsatplay.js.LICENSE.txt  webpack.config.js
config/: Cargo.toml  tauri.conf.json
docs/: AppletManager.html  BCIAppManager.html  BCIAppManager.md  BCIAppManager_BCIAppManager.html  CreatingAnAppletP1.md  DOMFragment.html  DOMFragment_DOMFragment.html  DataAtlas.html  DataAtlas_DataAtlas.html  DataServer.html  DataServer.js.html  applets.md  bciutils_dataAtlas.js.html  brainsatplay.js.html  brainsatplay.md  brainsatplayv2.js.html  class_BCIAppManager.html  class_DOMFragment.html  dataServer.md  docusaurus.config.js  frontend.md  frontend_BCIAppManager.js.html  frontend_utils_AppletManager.js.html  frontend_utils_DOMFragment.js.html  index.html  manifest.webmanifest  module-brainsatplay.brainsatplay.html  (+6 more)
src/libraries/other/src/: CMakeLists.txt  main  main.cpp  shared.cpp
src/libraries/other/src/core/: Brainsatplay.cpp  CMakeLists.txt  minimal-ws-client-echo.c  protocol_lws_minimal_client_echo.c
src/libraries/other/src/core/include/: brainsatplay.h
src/libraries/other/src/inc/: shared.h
(+1594 files in other folders)
